# my-haskell-utils

./: .travis.yml  my-utils.cabal  stack.yaml
src/MyUtils/: Char.hs  Console.hs  List.hs  Maybe.hs  Read.hs  Show.hs  Time.hs
tests/: Main.hs  tests.hs
tests/Tests/: List.hs  Maybe.hs  Read.hs  Show.hs  Time.hs
