name:                my-utils
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/my-utils#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -fwarn-tabs -Wcompat -Wincomplete-record-updates
                       -Wincomplete-uni-patterns -Wredundant-constraints
  exposed-modules:     MyUtils.Maybe
                     , MyUtils.Read
                     , MyUtils.List
                     , MyUtils.Show
                     , MyUtils.Time
                     , MyUtils.Console
  build-depends:       base >= 4.7 && < 5
                     , time
                     , ansi-terminal >= 0.8 && < 1
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tneisinger/my-haskell-utils

test-suite tests
  main-is:            Main.hs
  hs-source-dirs:     tests
  other-modules:      Tests.Read
                    , Tests.List
                    , Tests.Maybe
                    , Tests.Show
                    , Tests.Time
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N -Wall
                      -fno-warn-orphans
  type:               exitcode-stdio-1.0
  build-depends:      base >=4.7 && <5
                    , my-utils
                    , hspec >= 2.5.5 && < 3
                    , time
                    , QuickCheck
                    , quickcheck-string-random >= 0.1 && < 1
                    , quickcheck-instances >= 0.3 && < 1
                    , text
                    , ansi-terminal >= 0.8 && < 1
  default-language:   Haskell2010
